After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739161 - Fix wayland hidpi regressions
Fix wayland hidpi regressions
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: wayland
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2014-10-25 10:30 UTC by drago01
Modified: 2014-10-27 17:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Revert "wayland-surface: Apply the surface scale only if needed" (1.75 KB, patch)
2014-10-25 10:30 UTC, drago01
committed Details | Review
meta-wayland-surface: Correcly scale the input region (1.30 KB, patch)
2014-10-25 10:52 UTC, drago01
committed Details | Review

Description drago01 2014-10-25 10:30:15 UTC
This commit is wrong and actually breaks hidpi support.
Comment 1 drago01 2014-10-25 10:30:18 UTC
Created attachment 289307 [details] [review]
Revert "wayland-surface: Apply the surface scale only if needed"

This commit is wrong, it assumes that the scale only applies to the one
set by the client but its not. meta_surface_actor_wayland_scale_texture
also handles the output scale. Revert the commit to fix hidpi for wayland
clients like weston-terminal.

This reverts commit 0364ea91403cfc1c675c2776dda50aff4fb3788b.
Comment 2 drago01 2014-10-25 10:52:41 UTC
Created attachment 289308 [details] [review]
meta-wayland-surface: Correcly scale the input region

The input region currently only gets scaled by the surface
scale while ignoring the output scale, which causes input events to not get
delivered correctly for clients on hidpi screens. So take the output scale
into account when doing so.
Comment 3 drago01 2014-10-27 17:12:22 UTC
Attachment 289307 [details] pushed as a43ca7b - Revert "wayland-surface: Apply the surface scale only if needed"
Attachment 289308 [details] pushed as 718a89e - meta-wayland-surface: Correcly scale the input region

Pushed with IRC review.